"ChangeLog"

# NOTE: the latest CVS tag must appear in the first 10 lines of this ChangeLog.
# This version tag is used in building "main/version.cc".

2006-04-03	David Fang		<fangism@users.sourceforge.net>

	* HACKT-00-01-04-main-00-78-07-merged-prsim-01-15:
	  Branch merge of -prsim-01 work.  
	  With this branch comes a working production rule simulator based
		closely on the behavior (and code) from tools/prsim
		and other earlier versions of prsim.  
	  Many commands have been 'ported' over, given some interface 
		improvements, as well as introducing new commands.  
	  Much left on the TODO:prsim list. 


	* HACKT-00-01-04-main-00-78-06:
	  Afternote: no source change, only lib additions from Sandra.  


2006-04-02	David Fang		<fangism@users.sourceforge.net>

	* HACKT-00-01-04-main-00-78-05-prsim-01-15:
	  Minor typo fixes, and cross-checked against g++-4.1.  
	  Ready to merge to trunk.  


	* HACKT-00-01-04-main-00-78-05-prsim-01-14:
	  Implemented random timing in prsim -- preliminary.  
	  Branch is nearly ready for alpha-testing.  


2006-04-01	David Fang		<fangism@users.sourceforge.net>

	* HACKT-00-01-04-main-00-78-05-prsim-01-13:
	  Implemented State::signal_handler helper class for managing
		the SIGINT interupt handler.  
	  Preliminary benchmarks show hackt's prsim (-O2) faster than 
		the original prsim (-O3) but our work is not done yet.
	  Implemented 'break' family of commands, added test case.  


2006-03-31	David Fang		<fangism@users.sourceforge.net>

	* HACKT-00-01-04-main-00-78-05-prsim-01-12:
	  prsim 'initialize' command does not reset the watch/break point
		state of the nodes of the simulator, or the modes.  
	  Added 'reset' command to initialize and clear modes.  
	  'watch' and 'unwatch' can take arbitrary number of arguments, 
		and just iterates over each one.  
	  Fixed cause node value dumping on instability/interference.  
	  One test case demonstrates potential problem with fanout