@@ -1,137 +1,137 @@
-	0	_Reset : 0
-	10	R.x[0] : 1
-	20	R.x[1] : 0
-	30	R.x[2] : 1
-	40	R.x[3] : 0
-	50	R.x[4] : 1
-	60	R.x[5] : 0
-	70	R.x[6] : 1
-	80	R.x[7] : 0
-	90	R.x[8] : 1
-	100	R.x[9] : 0
-	110	R.x[10] : 1
-	120	R.x[11] : 0
-	130	R.x[12] : 1
-	130	_Reset : 1
-	140	R.x[0] : 0
-	150	R.x[1] : 1
-	160	R.x[2] : 0
-	170	R.x[3] : 1
-	180	R.x[4] : 0
-	190	R.x[5] : 1
-	200	R.x[6] : 0
-	210	R.x[7] : 1
-	220	R.x[8] : 0
-	230	R.x[9] : 1
-	240	R.x[10] : 0
-	250	R.x[11] : 1
-	260	R.x[12] : 0
-	270	R.x[0] : 1
-	280	R.x[1] : 0
-	290	R.x[2] : 1
-	300	R.x[3] : 0
-	310	R.x[4] : 1
-	320	R.x[5] : 0
-	330	R.x[6] : 1
-	340	R.x[7] : 0
-	350	R.x[8] : 1
-	360	R.x[9] : 0
-	370	R.x[10] : 1
-	380	R.x[11] : 0
-	390	R.x[12] : 1
-	400	R.x[0] : 0
-	410	R.x[1] : 1
-	420	R.x[2] : 0
-	430	R.x[3] : 1
-	440	R.x[4] : 0
-	450	R.x[5] : 1
-	460	R.x[6] : 0
-	470	R.x[7] : 1
-	480	R.x[8] : 0
-	490	R.x[9] : 1
-	500	R.x[10] : 0
-	510	R.x[11] : 1
-	520	R.x[12] : 0
-	530	R.x[0] : 1
+	#TIME#	_Reset : 0
+	#TIME#	R.x[0] : 1
+	#TIME#	R.x[1] : 0
+	#TIME#	R.x[2] : 1
+	#TIME#	R.x[3] : 0
+	#TIME#	R.x[4] : 1
+	#TIME#	R.x[5] : 0
+	#TIME#	R.x[6] : 1
+	#TIME#	R.x[7] : 0
+	#TIME#	R.x[8] : 1
+	#TIME#	R.x[9] : 0
+	#TIME#	R.x[10] : 1
+	#TIME#	R.x[11] : 0
+	#TIME#	R.x[12] : 1
+	#TIME#	_Reset : 1
+	#TIME#	R.x[0] : 0
+	#TIME#	R.x[1] : 1
+	#TIME#	R.x[2] : 0
+	#TIME#	R.x[3] : 1
+	#TIME#	R.x[4] : 0
+	#TIME#	R.x[5] : 1
+	#TIME#	R.x[6] : 0
+	#TIME#	R.x[7] : 1
+	#TIME#	R.x[8] : 0
+	#TIME#	R.x[9] : 1
+	#TIME#	R.x[10] : 0
+	#TIME#	R.x[11] : 1
+	#TIME#	R.x[12] : 0
+	#TIME#	R.x[0] : 1
+	#TIME#	R.x[1] : 0
+	#TIME#	R.x[2] : 1
+	#TIME#	R.x[3] : 0
+	#TIME#	R.x[4] : 1
+	#TIME#	R.x[5] : 0
+	#TIME#	R.x[6] : 1
+	#TIME#	R.x[7] : 0
+	#TIME#	R.x[8] : 1
+	#TIME#	R.x[9] : 0
+	#TIME#	R.x[10] : 1
+	#TIME#	R.x[11] : 0
+	#TIME#	R.x[12] : 1
+	#TIME#	R.x[0] : 0
+	#TIME#	R.x[1] : 1
+	#TIME#	R.x[2] : 0
+	#TIME#	R.x[3] : 1
+	#TIME#	R.x[4] : 0
+	#TIME#	R.x[5] : 1
+	#TIME#	R.x[6] : 0
+	#TIME#	R.x[7] : 1
+	#TIME#	R.x[8] : 0
+	#TIME#	R.x[9] : 1
+	#TIME#	R.x[10] : 0
+	#TIME#	R.x[11] : 1
+	#TIME#	R.x[12] : 0
+	#TIME#	R.x[0] : 1
 now with random delays 
-	540	R.x[1] : 0
-	620.201	R.x[2] : 1
-	11792.3	R.x[3] : 0
-	11841.7	R.x[4] : 1
-	11982.2	R.x[5] : 0
-	12015.5	R.x[6] : 1
-	30612.2	R.x[7] : 0
-	30612.4	R.x[8] : 1
-	31261.9	R.x[9] : 0
-	31266.8	R.x[10] : 1
-	31336.3	R.x[11] : 0
-	33464.4	R.x[12] : 1
-	33465.3	R.x[0] : 0
-	55047.9	R.x[1] : 1
-	55053.1	R.x[2] : 0
-	55057.9	R.x[3] : 1
-	55426.3	R.x[4] : 0
-	56237.8	R.x[5] : 1
-	56877.4	R.x[6] : 0
-	56896.4	R.x[7] : 1
-	56971.3	R.x[8] : 0
-	56996.2	R.x[9] : 1
-	60759.2	R.x[10] : 0
-	60785.6	R.x[11] : 1
-	60786.9	R.x[12] : 0
-	60875.1	R.x[0] : 1
-	74349.4	R.x[1] : 0
-	108781	R.x[2] : 1
-	110337	R.x[3] : 0
-	122277	R.x[4] : 1
-	122277	R.x[5] : 0
-	122445	R.x[6] : 1
-	122811	R.x[7] : 0
-	129045	R.x[8] : 1
-	129063	R.x[9] : 0
-	183187	R.x[10] : 1
-	183216	R.x[11] : 0
-	183998	R.x[12] : 1
-	184852	R.x[0] : 0
-	184862	R.x[1] : 1
+	#TIME#	R.x[1] : 0
+	#TIME#	R.x[2] : 1
+	#TIME#	R.x[3] : 0
+	#TIME#	R.x[4] : 1
+	#TIME#	R.x[5] : 0
+	#TIME#	R.x[6] : 1
+	#TIME#	R.x[7] : 0
+	#TIME#	R.x[8] : 1
+	#TIME#	R.x[9] : 0
+	#TIME#	R.x[10] : 1
+	#TIME#	R.x[11] : 0
+	#TIME#	R.x[12] : 1
+	#TIME#	R.x[0] : 0
+	#TIME#	R.x[1] : 1
+	#TIME#	R.x[2] : 0
+	#TIME#	R.x[3] : 1
+	#TIME#	R.x[4] : 0
+	#TIME#	R.x[5] : 1
+	#TIME#	R.x[6] : 0
+	#TIME#	R.x[7] : 1
+	#TIME#	R.x[8] : 0
+	#TIME#	R.x[9] : 1
+	#TIME#	R.x[10] : 0
+	#TIME#	R.x[11] : 1
+	#TIME#	R.x[12] : 0
+	#TIME#	R.x[0] : 1
+	#TIME#	R.x[1] : 0
+	#TIME#	R.x[2] : 1
+	#TIME#	R.x[3] : 0
+	#TIME#	R.x[4] : 1
+	#TIME#	R.x[5] : 0
+	#TIME#	R.x[6] : 1
+	#TIME#	R.x[7] : 0
+	#TIME#	R.x[8] : 1
+	#TIME#	R.x[9] : 0
+	#TIME#	R.x[10] : 1
+	#TIME#	R.x[11] : 0
+	#TIME#	R.x[12] : 1
+	#TIME#	R.x[0] : 0
+	#TIME#	R.x[1] : 1
 non-random delays 
-	203349	R.x[2] : 0
-	203359	R.x[3] : 1
-	203369	R.x[4] : 0
-	203379	R.x[5] : 1
-	203389	R.x[6] : 0
-	203399	R.x[7] : 1
-	203409	R.x[8] : 0
-	203419	R.x[9] : 1
-	203429	R.x[10] : 0
-	203439	R.x[11] : 1
-	203449	R.x[12] : 0
-	203459	R.x[0] : 1
-	203469	R.x[1] : 0
-	203479	R.x[2] : 1
-	203489	R.x[3] : 0
-	203499	R.x[4] : 1
-	203509	R.x[5] : 0
-	203519	R.x[6] : 1
-	203529	R.x[7] : 0
-	203539	R.x[8] : 1
-	203549	R.x[9] : 0
-	203559	R.x[10] : 1
-	203569	R.x[11] : 0
-	203579	R.x[12] : 1
-	203589	R.x[0] : 0
-	203599	R.x[1] : 1
-	203609	R.x[2] : 0
-	203619	R.x[3] : 1
-	203629	R.x[4] : 0
-	203639	R.x[5] : 1
-	203649	R.x[6] : 0
-	203659	R.x[7] : 1
-	203669	R.x[8] : 0
-	203679	R.x[9] : 1
-	203689	R.x[10] : 0
-	203699	R.x[11] : 1
-	203709	R.x[12] : 0
-	203719	R.x[0] : 1
-	203729	R.x[1] : 0
-	203739	R.x[2] : 1
+	#TIME#	R.x[2] : 0
+	#TIME#	R.x[3] : 1
+	#TIME#	R.x[4] : 0
+	#TIME#	R.x[5] : 1
+	#TIME#	R.x[6] : 0
+	#TIME#	R.x[7] : 1
+	#TIME#	R.x[8] : 0
+	#TIME#	R.x[9] : 1
+	#TIME#	R.x[10] : 0
+	#TIME#	R.x[11] : 1
+	#TIME#	R.x[12] : 0
+	#TIME#	R.x[0] : 1
+	#TIME#	R.x[1] : 0
+	#TIME#	R.x[2] : 1
+	#TIME#	R.x[3] : 0
+	#TIME#	R.x[4] : 1
+	#TIME#	R.x[5] : 0
+	#TIME#	R.x[6] : 1
+	#TIME#	R.x[7] : 0
+	#TIME#	R.x[8] : 1
+	#TIME#	R.x[9] : 0
+	#TIME#	R.x[10] : 1
+	#TIME#	R.x[11] : 0
+	#TIME#	R.x[12] : 1
+	#TIME#	R.x[0] : 0
+	#TIME#	R.x[1] : 1
+	#TIME#	R.x[2] : 0
+	#TIME#	R.x[3] : 1
+	#TIME#	R.x[4] : 0
+	#TIME#	R.x[5] : 1
+	#TIME#	R.x[6] : 0
+	#TIME#	R.x[7] : 1
+	#TIME#	R.x[8] : 0
+	#TIME#	R.x[9] : 1
+	#TIME#	R.x[10] : 0
+	#TIME#	R.x[11] : 1
+	#TIME#	R.x[12] : 0
+	#TIME#	R.x[0] : 1
+	#TIME#	R.x[1] : 0
+	#TIME#	R.x[2] : 1
